welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	while (x=false){
                ^